--- a/home page.html
+++ b/home page.html
@@ -17,6 +17,7 @@
     <div class="topnav">
         <ul>
             <a href="home page.html">Home </a>
+            <a href="Product.html">products </a>
             <a class="active" href="Account.html">Account </a>
 
         </ul>
@@ -30,7 +31,7 @@
                 <div class="col-2">
                     <div class="form-container2">
                         <div class="form-btn">
-                            <span>ยินดีต้อนรับ</span>
+                            <span>ยินดีต้อนรับสู่หน้าโฮม</span>
 
                             <hr id="Indicator2">
                         </div>
