--- a/index.html
+++ b/index.html
@@ -17,6 +17,7 @@
     <div class="topnav">
         <ul>
             <a href="home page.html">Home </a>
+            <a href="Product.html">products </a>
             <a class="active" href="Account.html">Accont </a>
 
         </ul>
