--- a/Account.html
+++ b/Account.html
@@ -29,16 +29,21 @@
                 </div>
                 <div class="col-2">
                     <div class="form-container">
+
                         <div class="form-btn">
                             <span onclick="login()">Login</span>
                             <span onclick="register()">Register</span>
                             <hr id="Indicator">
+
                         </div>
+                        <img src="Images/img_avatar.png" alt="Avatar" class="avatar">
                         <form id="LoginForm">
                             <input type="text" placeholder="Username">
                             <input type="password" placeholder="Password">
                             <button type="submit" onclick="move()" class="btn">Login</button>
-                            <p class="loader"></p>
+                            <center>
+                                <p class="loader"></p>
+                            </center>>
                             <a href="">Forget Password</a>
                         </form>
 
